2023-02-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Port a test to work with macOS sed.

	* tmac/tests/doc_heading-font-remapping-works.sh: Put semicolons
	between commands and closing braces in sed script.  Put each of
	multiple closing braces on a separate input line, because macOS
	doesn't accept them otherwise.  Resolves test failure observed
	on macOS.
	* HACKING: Document the closing brace sequence problem.

2023-02-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man]: Port a test to work with macOS sed.

	* tmac/tests/an_TS-adds-no-vertical-space.sh: Put semicolons
	between commands and closing braces in sed script.  Separate
	command stream into multiple '-e' expressions, breaking them
	after branch and label commands.  Resolves test failure observed
	on macOS.
	* HACKING: Document the above problems.

2023-02-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/\
	some_escapes_accept_newline_delimiters.sh: Weaken regexes in two
	test cases to accommodate excessive output from macOS's 'od'
	command.  Resolves test failure seen on macOS.
	* HACKING: Add section "Writing Tests" and document the above
	since this is the second time I've cracked my shin on this.

2023-02-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/tests/basic-fonts-present.sh: Skip test if 'gs'
	command not available.  The test is to ensure that gropdf will
	produce sound documents using the base fonts from PostScript,
	but since gropdf requires Ghostscript to do this (as noted in
	our "./configure" messages), it makes no sense to validate font
	availability if the program is absent.  Resolves test failure
	seen on macOS with minimal dependencies installed.

2023-02-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi (Manipulating Filling and Adjustment): Say more
	about the consequences of a break.

	Fixes <https://savannah.gnu.org/bugs/?63777>.  Thanks to Dave
	Kemper for the report.
