@@ -92,6 +92,19 @@ Here are some portability notes on writing automated tests.
   might need to be weakened to the following on macOS.
     grep -Eqx '0000000 +A +\\b +B +\\b +C       D +\\n *'
 
+* The "od" command on macOS does not respect the environment variable
+  assignment "LC_ALL=C" when processing byte values 127<x<256 decimal
+  and using the "character" output format (option "-t c").  An
+  alternative output must be used, like bytewise octal (option "-t o1").
+  (macOS od may be non-conforming here, despite the claim of its man
+  page.  POSIX Issue 4 od's description says "The type specifier
+  character c specifies that bytes will be interpreted as characters
+  specified by the current setting of the LC_CTYPE locale category. ...
+  Other non-printable characters will be written as one three-digit
+  octal number for each byte in the character." (p. 538)  The language
+  in Issue 7 (2018) appears unchanged.
+    https://pubs.opengroup.org/onlinepubs/9699919799/utilities/od.html )
+
 * macOS sed requires semicolons after commands even if they are followed
   immediately by a closing brace.
 
