@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# Copyright (C) 2022 Free Software Foundation, Inc.
+# Copyright (C) 2022-2023 Free Software Foundation, Inc.
 #
 # This file is part of groff.
 #
@@ -43,30 +43,32 @@ input=$(\
 )
 
 output=$(printf "%s\n" "$input" | "$groff" -Tlatin1 -mlatin2 \
-    | LC_ALL=C od -t c)
+    | LC_ALL=C od -t o1)
+printf "%s\n" "$output"
 printf "$output" \
-    | grep -Eq '^0000000 241 242 243 246 251 252 253 254 256 257 +' \
+    | grep -Eq '^0000000 +241 242 243 246 251 252 253 254 256 257 +' \
     || wail "in block 0xA0"
 printf "$output" \
-    | grep -Eq '^0000000 .* 261 262 263 266 271$' \
-    || wail "in block 0xB0"
+    | grep -Eq '^0000000 +.* 261 262 263 266 271$' \
+    || wail "in block 0xB0 (address 0..017)"
 printf "$output" \
-    | grep -Eq '^0000020 272 273 274 275 256 277 +' \
-    || wail "in block 0xB0"
+    | grep -Eq '^0000020 +272 273 274 275 256 277 +' \
+    || wail "in block 0xB0 (address 020..037)"
 printf "$output" \
-    | grep -Eq '^0000020 .* 300 303 305 306 310 312 314 317 +$' \
+    | grep -Eq '^0000020 +.* 300 303 305 306 310 312 314 317 040$' \
     || wail "in block 0xC0"
 printf "$output" \
-    | grep -Eq '^0000040 320 321 322 325 330 331 333 336 +' \
+    | grep -Eq '^0000040 +320 321 322 325 330 331 333 336 +' \
     || wail "in block 0xD0"
 printf "$output" \
-    | grep -Eq '^0000040 .* 340 343 345 346 350 352 354$' \
-    || wail "in block 0xE0"
+    | grep -Eq '^0000040 +.* 340 343 345 346 350 352 354$' \
+    || wail "in block 0xE0 (address 040..057)"
 printf "$output" \
-    | grep -Eq '^0000060 357 +' \
-    || wail "in block 0xE0"
+    | grep -Eq '^0000060 +357 +' \
+    || wail "in block 0xE0 (address 060..077)"
 printf "$output" \
-    | grep -Eq '^0000060 .* 360 361 362 365 370 371 373 376 377 +$' \
+    | grep -Eq \
+        '^0000060 +.* 360 361 362 365 370 371 373 376 377( 012)+$' \
     || wail "in block 0xF0"
 
 test -z "$fail"
